fixed fixed nav position (again) fixed font flicker
-fixed fixed nav position (again)
-fixed font flicker!!!

--- a/style.css
+++ b/style.css
@@ -29,6 +29,9 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+article, section, footer {
+	-webkit-backface-visibility: hidden;
+}
 html {
 	overflow-x: hidden;
 }
